fixing background and spacing, div layouts

--- a/rwst.css
+++ b/rwst.css
@@ -66,13 +66,17 @@ a:visited {
 
 @media only screen
 
-  and (max-device-width: 812px) {
+  and (max-device-width : 812px)
+  and (orientation : portrait) {
 
     .bg1 {
       background-image: url('bg/bg.jpg');
       background-repeat: no-repeat;
-      background-position: 0vw 40vh;
+      /* background-position: 0vw 40vh; */
       background-size: 100%;
+      height: max-content;
+      overflow: visible;
+      height: 133.333333333vw;
     }
 
     #mw {
@@ -85,7 +89,7 @@ a:visited {
       color: rgb(56,56,56);
       line-height: 1.3em;
       padding-top: 0.4em;
-      padding-bottom: 0.2em;
+      height: 35vh;
     }
 
     .sptop {
@@ -110,21 +114,81 @@ a:visited {
       font-weight: 400;
       font-size: calc(0.5em + 1vw);
       color: rgb(56,56,56);
-      padding-top: 20vh;
-      padding-bottom: 0.5em;
+      padding-top: 1em;
+      padding-bottom: 1em;
     }
 
 }
 
 @media only screen
 
-  and (min-device-width: 812px) {
+  and (max-device-width : 812px)
+  and (orientation : landscape) {
 
     .bg1 {
       background-image: url('bg/bg.jpg');
       background-repeat: no-repeat;
-      background-position: 0vw 80vh;
+      /* background-position: 0vw 40vh; */
       background-size: 100%;
+      height: max-content;
+      overflow: visible;
+      height: 133.333333333vw;
+    }
+
+    #mw {
+      /* background-image: url(mw.svg);
+      background-repeat: no-repeat;
+      background-position: center; */
+      font-family: 'Poppins', sans-serif;
+      font-weight: 700;
+      font-size: calc(2em + 4vw + 2vh);
+      color: rgb(56,56,56);
+      line-height: 1.3em;
+      padding-top: 0.4em;
+      height: 70vh;
+    }
+
+    .sptop {
+      padding-top: calc(1em + 3vh);
+      padding-bottom: calc(0.5em + 1vh);
+    }
+
+    .spmid {
+      padding-top: calc(0.5em + 1vh);
+      padding-bottom: calc(0.5em + 1vh);
+    }
+
+    .head1 {
+      font-family: 'Poppins', sans-serif;
+      font-weight: 400;
+      font-size: calc(2em + 1vw + 1vh);
+      color: rgb(244,244,244);
+    }
+
+    .info {
+      font-family: 'Poppins', sans-serif;
+      font-weight: 400;
+      font-size: calc(0.5em + 1vw);
+      color: rgb(56,56,56);
+      padding-top: 1em;
+      padding-bottom: 1em;
+    }
+
+}
+
+
+@media only screen
+
+  and (min-device-width : 812px) {
+
+    .bg1 {
+      background-image: url('bg/bg.jpg');
+      background-repeat: no-repeat;
+      /* background-position: 0vw 80vh; */
+      background-size: 100%;
+      height: max-content;
+      overflow: visible;
+      height: 133.333333333vw;
     }
 
     #mw {
@@ -137,17 +201,17 @@ a:visited {
       color: rgb(56,56,56);
       line-height: 1.3em;
       padding-top: 0.4em;
-      padding-bottom: 0.2em;
+      height: 70vh;
     }
 
     .sptop {
-      padding-top: calc(6em + 3vh);
-      padding-bottom: calc(1em + 2vh);
+      padding-top: 40vh;
+      padding-bottom: calc(1.2em + 2vh);
     }
 
     .spmid {
-      padding-top: calc(1em + 2vh);
-      padding-bottom: calc(1em + 2vh);
+      padding-top: calc(1.2em + 2vh);
+      padding-bottom: calc(1.2em + 2vh);
     }
 
     .head1 {
@@ -162,8 +226,8 @@ a:visited {
       font-weight: 400;
       font-size: calc(0.5em + 1vw);
       color: rgb(56,56,56);
-      padding-top: 150vh;
-      padding-bottom: 0.5em;
+      padding-top: 0.2em;
+      padding-bottom: 1em;
     }
 }
 
@@ -194,5 +258,5 @@ div {
   margin-right: auto;
   text-align: center;
   width: 100%
-  position: absolute;
+  /* position: absolute; */
 }
